@@ -548,3 +548,5 @@ contributors:
   - Fixed `toml` dependency issue
 
 * Tim Martin: contributor
+
+* Jaehoon Hwang (jaehoonhwang): contributor
