@@ -1,25 +1,0 @@
-len-as-condition:4:3::Do not use `len(SEQUENCE)` without comparison to determine if a sequence is empty
-len-as-condition:7:3::Do not use `len(SEQUENCE)` without comparison to determine if a sequence is empty
-len-as-condition:11:9::Do not use `len(SEQUENCE)` without comparison to determine if a sequence is empty
-len-as-condition:14:11::Do not use `len(SEQUENCE)` without comparison to determine if a sequence is empty
-len-as-condition:55:5::Do not use `len(SEQUENCE)` without comparison to determine if a sequence is empty
-len-as-condition:60:5::Do not use `len(SEQUENCE)` without comparison to determine if a sequence is empty
-len-as-condition:63:6::Do not use `len(SEQUENCE)` without comparison to determine if a sequence is empty
-len-as-condition:66:6::Do not use `len(SEQUENCE)` without comparison to determine if a sequence is empty
-len-as-condition:69:12::Do not use `len(SEQUENCE)` without comparison to determine if a sequence is empty
-len-as-condition:72:6::Do not use `len(SEQUENCE)` without comparison to determine if a sequence is empty
-len-as-condition:95:11:github_issue_1331_v2:Do not use `len(SEQUENCE)` without comparison to determine if a sequence is empty
-len-as-condition:98:11:github_issue_1331_v3:Do not use `len(SEQUENCE)` without comparison to determine if a sequence is empty
-len-as-condition:101:17:github_issue_1331_v4:Do not use `len(SEQUENCE)` without comparison to determine if a sequence is empty
-len-as-condition:103:9::Do not use `len(SEQUENCE)` without comparison to determine if a sequence is empty
-len-as-condition:104:9::Do not use `len(SEQUENCE)` without comparison to determine if a sequence is empty
-len-as-condition:124:11:github_issue_1879:Do not use `len(SEQUENCE)` without comparison to determine if a sequence is empty
-len-as-condition:125:11:github_issue_1879:Do not use `len(SEQUENCE)` without comparison to determine if a sequence is empty
-len-as-condition:126:11:github_issue_1879:Do not use `len(SEQUENCE)` without comparison to determine if a sequence is empty
-len-as-condition:127:11:github_issue_1879:Do not use `len(SEQUENCE)` without comparison to determine if a sequence is empty
-len-as-condition:128:11:github_issue_1879:Do not use `len(SEQUENCE)` without comparison to determine if a sequence is empty
-len-as-condition:129:11:github_issue_1879:Do not use `len(SEQUENCE)` without comparison to determine if a sequence is empty
-len-as-condition:130:11:github_issue_1879:Do not use `len(SEQUENCE)` without comparison to determine if a sequence is empty
-len-as-condition:171:11:github_issue_1879:Do not use `len(SEQUENCE)` without comparison to determine if a sequence is empty
-undefined-variable:183:11:github_issue_4215:Undefined variable 'undefined_var'
-undefined-variable:185:11:github_issue_4215:Undefined variable 'undefined_var2'
