@@ -15,6 +15,10 @@ Release date: TBA
 
   Closes #3859
 
+* Rename ``len-as-condition`` to ``use-implicit-booleaness-not-len``
+
+  Closes #4774
+
 
 What's New in Pylint 2.11.2?
 ============================
